Commit before everything blows up