@@ -6,7 +6,13 @@ import org.bunnys.handler.utils.Logger;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 
+/**
+ * Configuration class for the GBF Handler, optimized for immutability, thread-safety, and validation.
+ * Uses a builder pattern for flexible instantiation and provides default values for all fields.
+ * Maintains original method names for compatibility.
+ */
 public class Config {
     // Handler Features
     private final String version;
@@ -18,39 +24,50 @@ public class Config {
     private final String commandsFolder;
     private final String prefix;
     private final List<UserSnowflake> developers;
+    private final int timeoutSeconds;
+    private final int retries;
 
     // Bot Features
-    private String token;
+    private volatile String token; // Only mutable field, thread-safe
     private final List<GatewayIntent> intents;
 
-    public Config() {
-        // Default Values
-        this.token = null;
-        this.intents = Collections.emptyList();
-        this.version = "1.0.0";
-        this.autoLogin = false;
-        this.logActions = false;
-        this.eventFolder = null;
-        this.ignoreEvents = false;
-        this.ignoreEventsFromHandler = false;
-        this.commandsFolder = null;
-        this.prefix = "!";
-        this.developers = Collections.emptyList();
+    // Default values
+    private static final String DEFAULT_VERSION = "1.0.0";
+    private static final String DEFAULT_PREFIX = "!";
+    private static final int DEFAULT_TIMEOUT_SECONDS = 10;
+    private static final int DEFAULT_RETRIES = 3;
+
+    private Config(Builder builder) {
+        this.token = builder.token;
+        this.intents = List.copyOf(Objects.requireNonNullElse(builder.intents, Collections.emptyList()));
+        this.version = Objects.requireNonNullElse(builder.version, DEFAULT_VERSION);
+        this.autoLogin = builder.autoLogin;
+        this.logActions = builder.logActions;
+        this.eventFolder = builder.eventFolder;
+        this.ignoreEvents = builder.ignoreEvents;
+        this.ignoreEventsFromHandler = builder.ignoreEventsFromHandler;
+        this.commandsFolder = builder.commandsFolder;
+        this.prefix = Objects.requireNonNullElse(builder.prefix, DEFAULT_PREFIX);
+        this.developers = List.copyOf(Objects.requireNonNullElse(builder.developers, Collections.emptyList()));
+        this.timeoutSeconds = builder.timeoutSeconds > 0 ? builder.timeoutSeconds : DEFAULT_TIMEOUT_SECONDS;
+        this.retries = builder.retries > 0 ? builder.retries : DEFAULT_RETRIES;
     }
 
     // Builder Pattern for Config
     public static class Builder {
         private String token = null;
         private List<GatewayIntent> intents = Collections.emptyList();
-        private String version = "1.0.0";
+        private String version = DEFAULT_VERSION;
         private boolean autoLogin = false;
         private boolean logActions = false;
         private String eventFolder = null;
         private boolean ignoreEvents = false;
         private boolean ignoreEventsFromHandler = false;
         private String commandsFolder = null;
-        private String prefix = "!";
+        private String prefix = DEFAULT_PREFIX;
         private List<UserSnowflake> developers = Collections.emptyList();
+        private int timeoutSeconds = DEFAULT_TIMEOUT_SECONDS;
+        private int retries = DEFAULT_RETRIES;
 
         public Builder Token(String token) {
             this.token = token;
@@ -58,12 +75,12 @@ public class Config {
         }
 
         public Builder Intents(List<GatewayIntent> intents) {
-            this.intents = intents != null ? intents : Collections.emptyList();
+            this.intents = intents;
             return this;
         }
 
         public Builder Version(String version) {
-            this.version = version != null ? version : "1.0.0";
+            this.version = version;
             return this;
         }
 
@@ -99,8 +116,8 @@ public class Config {
 
         public Builder Prefix(String prefix) {
             if (prefix == null || prefix.isBlank()) {
-                this.prefix = "!";
-                Logger.warning("Prefix cannot be null or blank. Defaulting to '!'");
+                Logger.warning("Prefix cannot be null or blank. Defaulting to '" + DEFAULT_PREFIX + "'");
+                this.prefix = DEFAULT_PREFIX;
             } else {
                 this.prefix = prefix;
             }
@@ -108,27 +125,23 @@ public class Config {
         }
 
         public Builder Developers(List<UserSnowflake> developers) {
-            this.developers = developers != null ? developers : Collections.emptyList();
+            this.developers = developers;
+            return this;
+        }
+
+        public Builder TimeoutSeconds(int timeoutSeconds) {
+            this.timeoutSeconds = timeoutSeconds;
+            return this;
+        }
+
+        public Builder Retries(int retries) {
+            this.retries = retries;
             return this;
         }
 
         public Config Build() {
             return new Config(this);
         }
-    }
-
-    private Config(Builder builder) {
-        this.token = builder.token;
-        this.intents = builder.intents;
-        this.version = builder.version;
-        this.autoLogin = builder.autoLogin;
-        this.logActions = builder.logActions;
-        this.eventFolder = builder.eventFolder;
-        this.ignoreEvents = builder.ignoreEvents;
-        this.ignoreEventsFromHandler = builder.ignoreEventsFromHandler;
-        this.commandsFolder = builder.commandsFolder;
-        this.prefix = builder.prefix;
-        this.developers = builder.developers;
     }
 
     // Setter for token (only mutable field)
@@ -182,5 +195,21 @@ public class Config {
 
     public List<UserSnowflake> Developers() {
         return developers;
+    }
+
+    public int getTimeoutSeconds() {
+        return timeoutSeconds;
+    }
+
+    public int getRetries() {
+        return retries;
+    }
+
+    public int getTimeoutSeconds(int defaultValue) {
+        return timeoutSeconds > 0 ? timeoutSeconds : defaultValue;
+    }
+
+    public int getRetries(int defaultValue) {
+        return retries > 0 ? retries : defaultValue;
     }
 }
